[gd_scene load_steps=38 format=3 uid="uid://dmyl7dmuee7qy"]

[ext_resource type="PackedScene" uid="uid://uid2j5pbua11" path="res://Scenes/Player/slime_player_joystick.tscn" id="1_5j7v1"]
[ext_resource type="PackedScene" uid="uid://cx6ms5v5vdqce" path="res://Scenes/Mechanics/game_manager.tscn" id="2_fiwc2"]
[ext_resource type="PackedScene" uid="uid://mhcc6jvxkvlt" path="res://Scenes/Mechanics/numbers.tscn" id="3_15wgt"]
[ext_resource type="Script" path="res://Scripts/game_manager_world_3.gd" id="3_o5e3v"]
[ext_resource type="PackedScene" uid="uid://c8wpqokks1cqb" path="res://Scenes/Mechanics/operators.tscn" id="4_k68ik"]
[ext_resource type="PackedScene" uid="uid://s4mb4wtyw15x" path="res://Scenes/Mechanics/final_answer.tscn" id="5_qytg7"]
[ext_resource type="PackedScene" uid="uid://bvu8kvnxtxkqp" path="res://Scenes/timer.tscn" id="6_6ive0"]
[ext_resource type="FontFile" uid="uid://cyd2w1o32jhcd" path="res://Galactic Arithmetic Assets/Fonts/Pixeboy-z8XGD.ttf" id="7_t534h"]
[ext_resource type="PackedScene" uid="uid://cilquuf1rtf65" path="res://Scenes/Enemies/world_3_enemies.tscn" id="8_kqlkj"]
[ext_resource type="PackedScene" uid="uid://dyvtdhajlwyx8" path="res://Scenes/Mechanics/health_system.tscn" id="9_inmmb"]
[ext_resource type="Texture2D" uid="uid://dq5ixgt07t2ww" path="res://Galactic Arithmetic Assets/In-Game_Menu_Assets/Pause_Button.png" id="10_l8ovq"]
[ext_resource type="Script" path="res://Scripts/paused_menu_button.gd" id="11_exey7"]
[ext_resource type="PackedScene" uid="uid://cgr14huq7oye2" path="res://Scenes/Menu/Paused_Menu/paused_menu.tscn" id="12_pdh1b"]
[ext_resource type="Script" path="res://Scripts/game_over.gd" id="13_ypeaa"]
[ext_resource type="Texture2D" uid="uid://eal07jnthpe" path="res://Galactic Arithmetic Assets/Game_Over_Assets/menu_bg.png" id="14_yb653"]
[ext_resource type="Texture2D" uid="uid://bnp2bmj2lsxb7" path="res://Galactic Arithmetic Assets/Game_Over_Assets/planet_destroyed_design.png" id="15_ipxhw"]
[ext_resource type="Texture2D" uid="uid://be7jutn0xtqjx" path="res://Galactic Arithmetic Assets/Game_Over_Assets/crashed_ufo_design.png" id="16_34lpg"]
[ext_resource type="Texture2D" uid="uid://cx3s73kplpcec" path="res://Galactic Arithmetic Assets/Game_Over_Assets/game-over-text.png" id="17_wt1ot"]
[ext_resource type="Texture2D" uid="uid://dimklv4puhep0" path="res://Galactic Arithmetic Assets/Game_Over_Assets/gameover_holder.png" id="18_x7fmp"]
[ext_resource type="Texture2D" uid="uid://bs0uc8jkdriku" path="res://Sprites/Character/sad_slimey.png" id="19_0gimi"]
[ext_resource type="Texture2D" uid="uid://3gndw501yox3" path="res://Galactic Arithmetic Assets/Game_Over_Assets/button_holder.png" id="20_5603w"]
[ext_resource type="Texture2D" uid="uid://bcaoat487emgw" path="res://Galactic Arithmetic Assets/Game_Over_Assets/restart_button.png" id="21_bnead"]
[ext_resource type="Texture2D" uid="uid://dag8hg0rvi0s4" path="res://Galactic Arithmetic Assets/level_complete_asset/RESTART_BUTTON_75.png" id="22_wpp3v"]
[ext_resource type="Texture2D" uid="uid://cd8ryefiqekn0" path="res://Galactic Arithmetic Assets/Game_Over_Assets/home-button.png" id="23_kpm5v"]
[ext_resource type="Texture2D" uid="uid://divuqbrp4awkv" path="res://Galactic Arithmetic Assets/In-Game_Menu_Assets/home_button_75.png" id="24_drwvr"]
[ext_resource type="Script" path="res://Scripts/level_complete_menu.gd" id="25_wdo6t"]
[ext_resource type="Texture2D" uid="uid://crhbjfi262iqx" path="res://Galactic Arithmetic Assets/level_complete_asset/UFO.png" id="26_bn0rw"]
[ext_resource type="Texture2D" uid="uid://gg2meb0btp0l" path="res://Galactic Arithmetic Assets/level_complete_asset/SLIMEYS.png" id="27_2ubef"]
[ext_resource type="Texture2D" uid="uid://bfsdm20oqx2gq" path="res://Galactic Arithmetic Assets/level_complete_asset/LEVEL_COMPLETE_BG.png" id="28_ulv3i"]
[ext_resource type="Texture2D" uid="uid://dowgmef2b80jh" path="res://Galactic Arithmetic Assets/level_complete_asset/PLACEHOLDER_BUTTON.png" id="29_dcakl"]
[ext_resource type="Texture2D" uid="uid://c8by2x8ogpqkx" path="res://Galactic Arithmetic Assets/level_complete_asset/RIGHT_ARROW_BUTTON.png" id="30_t1wk7"]
[ext_resource type="Texture2D" uid="uid://cjrkhkab5cffa" path="res://Galactic Arithmetic Assets/level_complete_asset/RIGHT_ARROW_BUTTON_75.png" id="31_46ywk"]
[ext_resource type="Texture2D" uid="uid://y7l37jl0o23c" path="res://Galactic Arithmetic Assets/level_complete_asset/RESTART_BUTTON.png" id="32_22pke"]
[ext_resource type="Texture2D" uid="uid://by47a4pppasyh" path="res://Galactic Arithmetic Assets/level_complete_asset/LEVEL_COMPLETE_TEXT.png" id="33_scx2w"]
[ext_resource type="Texture2D" uid="uid://dq1dvsfffcq01" path="res://Galactic Arithmetic Assets/level_complete_asset/TIMER.png" id="34_xp6ri"]
[ext_resource type="Texture2D" uid="uid://cwyywj81m7ajx" path="res://Galactic Arithmetic Assets/level_complete_asset/time_holder.png" id="35_1tj6d"]
[ext_resource type="PackedScene" uid="uid://cm2sgy57dl0pg" path="res://Scenes/Others/portal.tscn" id="36_d1w0q"]

[node name="test" type="Node2D"]

[node name="slime_player_joystick" parent="." instance=ExtResource("1_5j7v1")]

[node name="game_manager" parent="." instance=ExtResource("2_fiwc2")]
script = ExtResource("3_o5e3v")
num_term = 5

[node name="Numbers" parent="game_manager" instance=ExtResource("3_15wgt")]
position = Vector2(791, 877)
number = 5

[node name="Numbers2" parent="game_manager" instance=ExtResource("3_15wgt")]
position = Vector2(1127, 711)
number = 4

[node name="Numbers3" parent="game_manager" instance=ExtResource("3_15wgt")]
position = Vector2(564, 631)
number = 1

[node name="Numbers4" parent="game_manager" instance=ExtResource("3_15wgt")]
position = Vector2(622, 469)
number = 7

[node name="Numbers5" parent="game_manager" instance=ExtResource("3_15wgt")]
position = Vector2(947, 472)
number = 8

[node name="Numbers6" parent="game_manager" instance=ExtResource("3_15wgt")]
position = Vector2(816, 285)
number = 3

[node name="operators" parent="game_manager" instance=ExtResource("4_k68ik")]
position = Vector2(1372, 808)
oper = "+"

[node name="operators2" parent="game_manager" instance=ExtResource("4_k68ik")]
position = Vector2(843, 665)
oper = "-"

[node name="operators3" parent="game_manager" instance=ExtResource("4_k68ik")]
position = Vector2(453, 405)
oper = "ร"

[node name="operators4" parent="game_manager" instance=ExtResource("4_k68ik")]
position = Vector2(1335, 379)
oper = "รท"

[node name="final_answer" parent="game_manager" instance=ExtResource("5_qytg7")]
position = Vector2(1547, 540)
scale = Vector2(3.6, 3.6)
final_answer = 10

[node name="timer" parent="game_manager" instance=ExtResource("6_6ive0")]

[node name="CurrentExpressionLabel" type="Label" parent="game_manager"]
offset_left = 576.0
offset_top = -17.0
offset_right = 1342.0
offset_bottom = 122.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("7_t534h")
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1
vertical_alignment = 1

[node name="world3_enemies" parent="." instance=ExtResource("8_kqlkj")]
position = Vector2(764, 459)
move_direction = Vector2(250, 0)

[node name="world3_enemies2" parent="." instance=ExtResource("8_kqlkj")]
position = Vector2(1144, 189)
enemy_type = "bat"
move_direction = Vector2(250, 0)

[node name="world3_enemies3" parent="." instance=ExtResource("8_kqlkj")]
position = Vector2(270, 281)
enemy_type = "lava"
move_direction = Vector2(250, 0)

[node name="health_system" parent="." instance=ExtResource("9_inmmb")]

[node name="menus" type="TextureButton" parent="."]
offset_left = 1838.0
offset_top = 8.0
offset_right = 1913.0
offset_bottom = 83.0
texture_normal = ExtResource("10_l8ovq")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("11_exey7")

[node name="game_paused" parent="menus" instance=ExtResource("12_pdh1b")]
visible = false
layout_mode = 1
offset_left = -915.0
offset_top = 495.0
offset_right = -915.0
offset_bottom = 495.0

[node name="game_over" type="Control" parent="menus"]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -915.5
offset_top = 494.5
offset_right = -915.5
offset_bottom = 494.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("13_ypeaa")

[node name="game_over_menu" type="Panel" parent="menus/game_over"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2

[node name="bg" type="TextureRect" parent="menus/game_over/game_over_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -375.0
offset_top = -250.0
offset_right = 375.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("14_yb653")

[node name="planet_destroyed_design" type="TextureRect" parent="menus/game_over/game_over_menu/bg"]
layout_mode = 1
offset_left = -188.0
offset_top = -150.0
offset_right = 197.0
offset_bottom = 165.0
texture = ExtResource("15_ipxhw")

[node name="crashed_ufo_design" type="TextureRect" parent="menus/game_over/game_over_menu/bg"]
layout_mode = 1
offset_left = 522.0
offset_top = 236.0
offset_right = 907.0
offset_bottom = 551.0
texture = ExtResource("16_34lpg")
expand_mode = 1

[node name="game_over_text" type="TextureRect" parent="menus/game_over/game_over_menu/bg"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -316.875
offset_right = 341.0
offset_bottom = -166.875
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("17_wt1ot")

[node name="bg_inside" type="TextureRect" parent="menus/game_over/game_over_menu/bg"]
modulate = Color(1, 1, 1, 0.862745)
self_modulate = Color(1, 1, 1, 0.862745)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -303.0
offset_top = -150.0
offset_right = 303.0
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.00162061
texture = ExtResource("18_x7fmp")

[node name="sad_slimey" type="TextureRect" parent="menus/game_over/game_over_menu/bg/bg_inside"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -495.774
offset_top = -264.813
offset_right = 505.226
offset_bottom = 299.187
grow_horizontal = 2
grow_vertical = 2
rotation = -0.00162061
texture = ExtResource("19_0gimi")
expand_mode = 1

[node name="button_holder" type="TextureRect" parent="menus/game_over/game_over_menu/bg"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = 125.0
offset_right = 300.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.00162061
texture = ExtResource("20_5603w")
expand_mode = 1

[node name="restart_button" type="TextureButton" parent="menus/game_over/game_over_menu/bg/button_holder"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = -37.5
offset_right = 175.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("21_bnead")
texture_pressed = ExtResource("22_wpp3v")
ignore_texture_size = true
stretch_mode = 0

[node name="home_button" type="TextureButton" parent="menus/game_over/game_over_menu/bg/button_holder"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -37.5
offset_right = -100.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("23_kpm5v")
texture_pressed = ExtResource("24_drwvr")
ignore_texture_size = true
stretch_mode = 0

[node name="level_complete_menu" type="Control" parent="menus"]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -915.5
offset_top = 494.5
offset_right = -915.5
offset_bottom = 494.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("25_wdo6t")

[node name="Panel" type="Panel" parent="menus/level_complete_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2

[node name="ufo" type="TextureRect" parent="menus/level_complete_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -337.0
offset_top = -580.0
offset_right = 325.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("26_bn0rw")

[node name="slime" type="TextureRect" parent="menus/level_complete_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -298.0
offset_top = -416.0
offset_right = 312.0
offset_bottom = -227.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("27_2ubef")

[node name="bg" type="TextureRect" parent="menus/level_complete_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -375.0
offset_top = -250.0
offset_right = 375.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("28_ulv3i")

[node name="button_placeholder" type="TextureRect" parent="menus/level_complete_menu/bg"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -323.5
offset_top = 100.0
offset_right = 323.5
offset_bottom = 201.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("29_dcakl")

[node name="next_level_button" type="TextureButton" parent="menus/level_complete_menu/bg/button_placeholder"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 126.5
offset_top = -37.5
offset_right = 201.5
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("30_t1wk7")
texture_pressed = ExtResource("31_46ywk")
ignore_texture_size = true
stretch_mode = 0

[node name="restart_button" type="TextureButton" parent="menus/level_complete_menu/bg/button_placeholder"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -198.5
offset_top = -37.5
offset_right = -123.5
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("32_22pke")
texture_pressed = ExtResource("22_wpp3v")
ignore_texture_size = true
stretch_mode = 0

[node name="text" type="TextureRect" parent="menus/level_complete_menu/bg"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -303.0
offset_top = -251.0
offset_right = 307.0
offset_bottom = -62.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("33_scx2w")

[node name="timer" type="TextureRect" parent="menus/level_complete_menu/bg"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.0
offset_top = -20.0
offset_right = -107.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("34_xp6ri")
expand_mode = 1

[node name="time_holder" type="TextureRect" parent="menus/level_complete_menu/bg/timer"]
self_modulate = Color(1, 1, 1, 0.607843)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 58.5
offset_top = -37.5
offset_right = 263.5
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("35_1tj6d")
expand_mode = 1

[node name="Label" type="Label" parent="menus/level_complete_menu/bg/timer"]
layout_mode = 0
offset_left = 96.0
offset_top = 5.0
offset_right = 303.0
offset_bottom = 76.0
theme_override_colors/font_color = Color(0.521569, 0.172549, 0.721569, 0.643137)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("7_t534h")
theme_override_font_sizes/font_size = 95
horizontal_alignment = 1
vertical_alignment = 1

[node name="Area2D" parent="." instance=ExtResource("36_d1w0q")]
position = Vector2(1302, 574)

[node name="Area2D2" parent="." instance=ExtResource("36_d1w0q")]
position = Vector2(516, 284)

[connection signal="pressed" from="menus" to="menus" method="_on_pressed"]
[connection signal="pressed" from="menus/game_over/game_over_menu/bg/button_holder/restart_button" to="menus/game_over" method="_on_restart_button_pressed"]
[connection signal="pressed" from="menus/game_over/game_over_menu/bg/button_holder/home_button" to="menus/game_over" method="_on_home_button_pressed"]
[connection signal="pressed" from="menus/level_complete_menu/bg/button_placeholder/next_level_button" to="menus/level_complete_menu" method="_on_next_level_button_pressed"]
[connection signal="pressed" from="menus/level_complete_menu/bg/button_placeholder/restart_button" to="menus/level_complete_menu" method="_on_restart_button_pressed"]
